# mastering-deep-learning

./: .gitignore  Phase01.md  Phase02.md  README.md  Taskfile.yml  main.py  pyproject.toml  roadmap.md
ANN/: mlp.py  perceptron.py
ANN/CustomerChurnPrediction/: Taskfile.yaml  Taskfile.yml  pyproject.toml
ANN/CustomerChurnPrediction/app/api/v1/routes/: churn.py  inference.py
ANN/CustomerChurnPrediction/app/core/: config.py  logger.py
ANN/CustomerChurnPrediction/app/data/models/: meta.pkl  scaler.pkl  tf_churn_model.h5
ANN/CustomerChurnPrediction/app/data/processed/: processed_churn.csv
ANN/CustomerChurnPrediction/app/inference/: categorical_features.py  eda.py  feature_selection.py  load_data.py  postprocess.py  predictor_pt.py  predictor_tf.py  preprocess.py
ANN/CustomerChurnPrediction/app/models/: tf_model.py
ANN/CustomerChurnPrediction/app/schemas/: inference.py  predict.py
ANN/CustomerChurnPrediction/app/training/: dataset.py  model_def.py  train.py
ANN/CustomerChurnPrediction/app/utils/: data_checks.py  download_kaggle_dataset.py
ANN/DigitClassification/: Taskfile.yml  main.py
ANN/NN_from_scratch/: Layers.py  activation.py  main.py  pyproject.toml  visual.py
Loss Functions/: README.md
RAG/: requirements.txt
RAG/Notebooks/: rag_intro.ipynb  rag_intro.slides.html  rag_pipeline_from_scratch.ipynb
day-01/: data.md  plot.py
day-01/loss/: mse.py
day-01/model_selection/: train_test_split.py
day-01/models/: normal_equation.py  runner.py  simple_linear_regression.py
deepml/: single_neuron.py
nn-from-scratch/: README.md
(+36 files in other folders)
