[project]
name = "customerchurnprediction"
version = "0.1.0"
description = "Customer churn prediction using FastAPI and TensorFlow"
readme = "README.md"
requires-python = ">=3.11.9"

dependencies = [
    "fastapi[standard]>=0.121.3",
    "kaggle>=1.7.4.5",
    "pydantic-settings>=2.12.0",
    "scikit-learn>=1.7.2",
]

[dependency-groups]
ml = [
    "tensorflow>=2.16.2",
    "tensorflow-macos>=2.16.2",
    "matplotlib>=3.10.7",
    "numpy>=1.26.4",
    "pandas>=2.3.3",
]

dev = [
    "mypy>=1.18.2",
    "ruff>=0.14.5",
    "black>=24.1.0",
    "isort>=5.12.0",
    "pytest>=7.4.2",
    "pytest-cov>=4.1.0",
    "pre-commit>=3.3.4",
    "colorlog>=6.10.1",
]

# ──────────────────────────────
# Tool configuration
# ──────────────────────────────

[tool.ruff]
line-length = 88
select = ["E", "F", "I", "B", "C"]
ignore = ["E203", "W503"]

[tool.mypy]
python_version = 3.11
strict = true
disallow_untyped_defs = true
ignore_missing_imports = true

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "--cov=backend --cov-report=term-missing"
testpaths = ["backend", "training"]
